# reference-simulation

./: .buildinfo  .gitignore  1D_model.py  LICENSE  README.md  genindex.html  he_resolution_visualization.ipynb  ho_resolution_visualization.ipynb  index.html  layered_resolution_visualization.ipynb  mass_visualization.ipynb  model.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  real_base.py  real_base_he.py  real_base_ho.py  real_base_layered.py  requirements.txt  resolutionlayerstudy.html  run_serial_layers_he.py  run_serial_layers_ho.py  run_serial_layers_stratified.py  run_serial_resolution.py  run_serial_resolution_he.py  run_serial_resolution_ho.py  run_serial_resolution_layered_he.py  search.html  searchindex.js  visualization.ipynb
.doctrees/: environment.pickle  index.doctree  readme.doctree  resolutionlayerstudy.doctree
.doctrees/_api/: modules.doctree  src.doctree
SerialResolution/: temperature_resolution_dx_1.csv
_api/: modules.html  src.html
_modules/: index.html
_sources/: index.rst
doc/: conf.py  feature-a.md  index.rst  resolutionlayerstudy.md
notebooks/: confining_layers_visualization.ipynb  ho_resolution_visualization.ipynb  mass_visualization.ipynb  test.ipynb
src/: check_density.py  math_rel.py  model.py  read_files.py  real_base.py  real_base_ho.py  real_base_layered.py  run_serial_layers.py  run_serial_layers_he.py  run_serial_layers_ho.py  run_serial_layers_stratified.py  run_serial_resolution.py  run_serial_resolution_ho.py
tests/: test_math_rel.py  test_read_files.py
utils/: math_rel.py  read_files.py
(+10 files in other folders)
