[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-simulation"
version = "0.1.0"
description = "Simulation on the Direct Use Geothermal Systems"
readme = "README.md"
authors = [{ name = "Yuan Chen", email = "y.chen-21@tudelft.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["simulation", "geothermal"]
dependencies = [
    "matplotlib==3.7.0",
    "matplotlib-inline==0.1.6",
    "pandas==1.5.3",
    "PyKrige==1.7.0",
    "gstools==1.4.1",
    "scikit-image==0.20.0",
    "open-darts==0.1.3",
    "pytest"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ychen1492/reference-simulation"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["src"]